Add basic styling and number form

--- a/index.html
+++ b/index.html
@@ -1,75 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess My Number</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-
+  <body>
     <div class="main">
-        <div class="numberswrapper">
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-            <div class="number"></div>
-
-        </div>
-
+      <div class="numberswrapper">
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+        <div class="number"></div>
+      </div>
+      <form>
+        <label for="numberInput">Tall:</label>
+        <input type="password" id="numberInput" name="numberInput" />
+      </form>
     </div>
 
-
-
     <script src="index.js"></script>
-</body>
-
+  </body>
 </html>
