--- a/index.html
+++ b/index.html
@@ -63,7 +63,21 @@
       </div>
       <form>
         <label for="numberInput">Tall:</label>
-        <input type="password" id="numberInput" name="numberInput" />
+        <input
+          type="password"
+          id="numberInput"
+          name="numberInput"
+          placeholder="Velg ett nummer"
+        />
+      </form>
+      <form>
+        <label for="guessInput">Tall:</label>
+        <input
+          type="number"
+          id="guessInput"
+          name="guessInput"
+          placeholder="Gjett ett nummer"
+        />
       </form>
     </div>
 
