--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           name="numberInput"
           placeholder="Velg ett nummer"
         />
+        <button>Lagre</button>
       </form>
       <form>
         <label for="guessInput">Tall:</label>
@@ -78,6 +79,7 @@
           name="guessInput"
           placeholder="Gjett ett nummer"
         />
+        <button>Gjett</button>
       </form>
     </div>
 
