button id let js

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           name="numberInput"
           placeholder="Velg ett nummer"
         />
-        <button>Lagre</button>
+        <button id="btnSave">Lagre</button>
       </form>
       <form>
         <label for="guessInput">Tall:</label>
@@ -79,7 +79,7 @@
           name="guessInput"
           placeholder="Gjett ett nummer"
         />
-        <button>Gjett</button>
+        <button id="btnGuess">Gjett</button>
       </form>
     </div>
 
