Add secret number event and global message

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <div class="main">
+      <p id="globalMessage">Test</p>
       <div class="numberswrapper">
         <div class="number">1</div>
         <div class="number">2</div>
@@ -67,7 +68,7 @@
           type="password"
           id="numberInput"
           name="numberInput"
-          placeholder="Velg ett nummer"
+          placeholder="Velg et hemmelig tall"
         />
         <button id="btnSave">Lagre</button>
       </form>
@@ -77,7 +78,7 @@
           type="number"
           id="guessInput"
           name="guessInput"
-          placeholder="Gjett ett nummer"
+          placeholder="Gjett et tall"
         />
         <button id="btnGuess">Gjett</button>
       </form>
