--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="main">
-      <p id="globalMessage">Test</p>
+      <p id="globalMessage"></p>
       <div class="numberswrapper">
         <div class="number">1</div>
         <div class="number">2</div>
