btnGuess and number to text input

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <form>
         <label for="guessInput">Tall:</label>
         <input
-          type="number"
+          type="text"
           id="guessInput"
           name="guessInput"
           placeholder="Gjett et tall"
