Cleanup global message

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="number">49</div>
         <div class="number">50</div>
       </div>
-      <form>
+      <form id="secretNumberForm">
         <label for="numberInput">Tall:</label>
         <input
           type="password"
