--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       <p id="globalMessage"></p>
       <div class="numberswrapper">
         <div class="number">1</div>
-        <div class="number">2</div>
+        <div class="number">
+          2
+          <div class="leftCross"></div>
+          <div class="rightCross"></div>
+        </div>
         <div class="number">3</div>
         <div class="number">4</div>
         <div class="number">5</div>
