--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="main">
       <p id="globalMessage"></p>
-      <form id="secretNumberForm">
+      <form id="secretNumberForm" autocomplete="off">
         <label for="numberInput">Tall:</label>
         <input
           type="password"
@@ -73,7 +73,7 @@
         <div class="number">49</div>
         <div class="number">50</div>
       </div>
-      <form>
+      <form autocomplete="off">
         <label for="guessInput">Tall:</label>
         <input
           type="text"
