--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="number">49</div>
         <div class="number">50</div>
       </div>
-      <form autocomplete="off">
+      <form id="guessInputForm" autocomplete="off">
         <label for="guessInput">Tall:</label>
         <input
           type="text"
