added reset btn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main">
       <p id="globalMessage"></p>
       <form id="secretNumberForm" autocomplete="off">
-        <label for="numberInput">Tall:</label>
+        <label for="numberInput"></label>
         <input
           type="password"
           id="numberInput"
@@ -74,7 +74,7 @@
         <div class="number">50</div>
       </div>
       <form id="guessInputForm" autocomplete="off">
-        <label for="guessInput">Tall:</label>
+        <label for="guessInput"></label>
         <input
           type="text"
           id="guessInput"
@@ -83,6 +83,7 @@
         />
         <button id="btnGuess">Gjett</button>
       </form>
+      <button id="resetBtn">Reset</button>
     </div>
 
     <script src="index.js"></script>
