Add reset logic

--- a/index.html
+++ b/index.html
@@ -73,17 +73,19 @@
         <div class="number">49</div>
         <div class="number">50</div>
       </div>
-      <form id="guessInputForm" autocomplete="off">
-        <label for="guessInput"></label>
-        <input
-          type="text"
-          id="guessInput"
-          name="guessInput"
-          placeholder="Gjett et tall"
-        />
-        <button id="btnGuess">Gjett</button>
-      </form>
-      <button id="resetBtn">Reset</button>
+      <div>
+        <form id="guessInputForm" autocomplete="off">
+          <label for="guessInput"></label>
+          <input
+            type="text"
+            id="guessInput"
+            name="guessInput"
+            placeholder="Gjett et tall"
+          />
+          <button id="btnGuess">Gjett</button>
+        </form>
+        <button id="resetBtn">Reset</button>
+      </div>
     </div>
 
     <script src="index.js"></script>
