jeg orker ikke mere

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button id="btnSave">Lagre</button>
       </form>
       <div class="numberswrapper">
-        <div class="number">1</div>
+        <div class="number"><b>1</b></div>
         <div class="number">2</div>
         <div class="number">3</div>
         <div class="number">4</div>
@@ -31,7 +31,7 @@
         <div class="number">7</div>
         <div class="number">8</div>
         <div class="number">9</div>
-        <div class="number">10</div>
+        <div class="number"><b>10</b></div>
         <div class="number">11</div>
         <div class="number">12</div>
         <div class="number">13</div>
@@ -41,7 +41,7 @@
         <div class="number">17</div>
         <div class="number">18</div>
         <div class="number">19</div>
-        <div class="number">20</div>
+        <div class="number"><b>20</b></div>
         <div class="number">21</div>
         <div class="number">22</div>
         <div class="number">23</div>
@@ -51,7 +51,7 @@
         <div class="number">27</div>
         <div class="number">28</div>
         <div class="number">29</div>
-        <div class="number">30</div>
+        <div class="number"><b>30</b></div>
         <div class="number">31</div>
         <div class="number">32</div>
         <div class="number">33</div>
@@ -61,7 +61,7 @@
         <div class="number">37</div>
         <div class="number">38</div>
         <div class="number">39</div>
-        <div class="number">40</div>
+        <div class="number"><b>40</b></div>
         <div class="number">41</div>
         <div class="number">42</div>
         <div class="number">43</div>
@@ -71,7 +71,7 @@
         <div class="number">47</div>
         <div class="number">48</div>
         <div class="number">49</div>
-        <div class="number">50</div>
+        <div class="number"><b>50</b></div>
       </div>
       <div>
         <form id="guessInputForm" autocomplete="off">
