--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           name="numberInput"
           placeholder="Velg et hemmelig tall"
           pattern="[0-9]*"
+          inputmode="numeric"
         />
         <button id="btnSave">Lagre</button>
       </form>
